--- a/src/main/resources/View/addRoomPane.fxml
+++ b/src/main/resources/View/addRoomPane.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="589.0" prefWidth="602.0" styleClass="casualPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.AddRoomPaneController">
+<AnchorPane id="AnchorPane" styleClass="casualPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.AddRoomPaneController">
     <stylesheets>
         <URL value="@/styles/main.css" />
     </stylesheets>
@@ -30,7 +30,7 @@
                               <Insets left="100.0" right="35.0" />
                            </HBox.margin>
                         </Label>
-                        <ComboBox fx:id="apartmentComboBox" prefHeight="45.0" prefWidth="250.0" styleClass="combobox">
+                        <ComboBox fx:id="apartmentComboBox" onAction="#selectApartment" prefHeight="45.0" prefWidth="250.0" styleClass="combobox">
                            <HBox.margin>
                               <Insets left="102.0" />
                            </HBox.margin>
@@ -50,9 +50,9 @@
                               <Insets left="100.0" right="35.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField fx:id="roomText" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
+                        <TextField fx:id="roomText" disable="true" onKeyReleased="#TextChange" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
                            <HBox.margin>
-                              <Insets left="52.0" />
+                              <Insets left="54.0" />
                            </HBox.margin>
                         </TextField>
                      </children>
@@ -70,7 +70,7 @@
                               <Insets left="100.0" right="35.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField fx:id="nostudentText" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
+                        <TextField fx:id="nostudentText" disable="true" onKeyReleased="#TextChange" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
                            <HBox.margin>
                               <Insets left="15.0" />
                            </HBox.margin>
@@ -80,24 +80,24 @@
                         <Insets top="20.0" />
                      </VBox.margin>
                   </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="62.0" prefWidth="608.0">
+                  <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="608.0">
                      <children>
                         <Label text="Trạng thái">
                            <font>
                               <Font name="Segoe UI Bold" size="18.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="100.0" right="35.0" />
+                              <Insets left="100.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField fx:id="statusText" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
+                        <TextField fx:id="statusText" disable="true" onKeyReleased="#TextChange" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
                            <HBox.margin>
-                              <Insets left="48.0" />
+                              <Insets left="82.0" />
                            </HBox.margin>
                         </TextField>
                      </children>
                      <VBox.margin>
-                        <Insets top="3.0" />
+                        <Insets top="15.0" />
                      </VBox.margin>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="47.0" prefWidth="594.0">
@@ -130,7 +130,7 @@
                               <Insets left="100.0" right="35.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField fx:id="rentingpriceText" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
+                        <TextField fx:id="rentingpriceText" onKeyReleased="#TextChange" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
                            <HBox.margin>
                               <Insets left="65.0" />
                            </HBox.margin>
@@ -145,20 +145,28 @@
                   <Insets top="30.0" />
                </VBox.margin>
             </VBox>
+            <Label fx:id="cEndError" text="ErrorLabel" textFill="RED" visible="false">
+               <font>
+                  <Font name="Segoe UI" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="270.0" />
+               </VBox.margin>
+            </Label>
             <HBox alignment="CENTER" prefHeight="168.0" prefWidth="600.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#backbtn" styleClass="appBtn-red" text="Hủy">
+                  <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#backbtn" prefHeight="58.0" prefWidth="120.0" styleClass="appBtn-red" text="Hủy">
                      <font>
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
+                     <padding>
+                        <Insets bottom="10.0" top="10.0" />
+                     </padding>
                      <HBox.margin>
                         <Insets right="100.0" />
                      </HBox.margin>
-                     <padding>
-                        <Insets bottom="10.0" left="48.0" right="48.0" top="10.0" />
-                     </padding>
                   </Button>
-                  <Button disable="true" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefWidth="131.0" styleClass="appBtn-green" text="Thêm">
+                  <Button fx:id="insertBtn" disable="true" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#insertdata" prefHeight="58.0" prefWidth="120.0" styleClass="appBtn-green" text="Thêm">
                      <font>
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
