--- a/src/main/resources/View/detailRoomPane.fxml
+++ b/src/main/resources/View/detailRoomPane.fxml
@@ -10,12 +10,12 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="420.0" prefWidth="400.0" styleClass="casualPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.DetailRoomPaneController">
+<AnchorPane id="AnchorPane" prefHeight="371.0" prefWidth="400.0" styleClass="casualPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.DetailRoomPaneController">
     <stylesheets>
         <URL value="@/styles/main.css" />
     </stylesheets>
    <children>
-      <VBox layoutX="105.0" layoutY="51.0" prefHeight="420.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutX="105.0" layoutY="51.0" prefHeight="368.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox layoutX="10.0" layoutY="10.0" prefWidth="200.0">
                <children>
@@ -155,11 +155,11 @@
                   <Insets top="20.0" />
                </VBox.margin>
             </HBox>
-            <BorderPane prefHeight="100.0" prefWidth="200.0">
+            <BorderPane prefHeight="100.0" prefWidth="400.0">
                <center>
-                  <Button mnemonicParsing="false" onAction="#backbtn" styleClass="appBtn-red" text="Quay lại" BorderPane.alignment="CENTER">
+                  <Button mnemonicParsing="false" onAction="#backbtn" prefHeight="38.0" prefWidth="100.0" styleClass="appBtn-red" text="Quay lại" BorderPane.alignment="CENTER">
                      <font>
-                        <Font name="Segoe UI Bold" size="18.0" />
+                        <Font name="Segoe UI Bold" size="14.0" />
                      </font>
                      <padding>
                         <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
