--- a/src/main/resources/View/editRoomPane.fxml
+++ b/src/main/resources/View/editRoomPane.fxml
@@ -17,7 +17,7 @@
         <URL value="@/styles/main.css" />
     </stylesheets>
     <children>
-      <VBox layoutX="105.0" layoutY="51.0" prefHeight="400.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox prefHeight="400.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox layoutX="10.0" layoutY="10.0" prefWidth="200.0">
                <children>
@@ -75,14 +75,14 @@
                         <Insets left="50.0" />
                      </HBox.margin>
                   </Label>
-                  <TextField fx:id="nostudentText" prefWidth="200.0" styleClass="textField2">
-                     <HBox.margin>
-                        <Insets left="40.0" />
-                     </HBox.margin>
+                  <Label fx:id="nostudentLable" text="Label">
                      <font>
                         <Font name="Segoe UI" size="18.0" />
                      </font>
-                  </TextField>
+                     <HBox.margin>
+                        <Insets left="40.0" />
+                     </HBox.margin>
+                  </Label>
                </children>
                <VBox.margin>
                   <Insets top="20.0" />
@@ -111,7 +111,7 @@
                   <Insets top="20.0" />
                </VBox.margin>
             </HBox>
-            <HBox layoutX="10.0" layoutY="148.0" prefHeight="36.0" prefWidth="500.0">
+            <HBox layoutX="10.0" layoutY="148.0" prefHeight="45.0" prefWidth="500.0">
                <children>
                   <Label text="Loại phòng">
                      <font>
@@ -121,10 +121,13 @@
                         <Insets left="50.0" />
                      </HBox.margin>
                   </Label>
-                  <ComboBox fx:id="typeCombobox" prefWidth="200.0" visibleRowCount="18">
+                  <ComboBox fx:id="typeComboBox" prefHeight="45.0" prefWidth="200.0">
                      <HBox.margin>
                         <Insets left="64.0" />
                      </HBox.margin>
+                     <padding>
+                        <Insets top="10.0" />
+                     </padding>
                   </ComboBox>
                </children>
                <VBox.margin>
@@ -169,7 +172,7 @@
                   </Button>
                </left>
                <right>
-                  <Button mnemonicParsing="false" prefWidth="100.0" styleClass="appBtn-green" text="Lưu" BorderPane.alignment="CENTER">
+                  <Button mnemonicParsing="false" onAction="#updatedata" prefWidth="100.0" styleClass="appBtn-green" text="Lưu" BorderPane.alignment="CENTER">
                      <font>
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
