--- a/src/main/resources/View/addRentBill.fxml
+++ b/src/main/resources/View/addRentBill.fxml
@@ -11,35 +11,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="casualPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.AddRentBillController">
+<AnchorPane id="AnchorPane" prefHeight="548.0" prefWidth="610.0" styleClass="casualPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.AddRentBillController">
     <stylesheets>
         <URL value="@/styles/main.css" />
     </stylesheets>
    <children>
-      <VBox prefHeight="678.0" prefWidth="610.0">
+      <VBox prefHeight="516.0" prefWidth="610.0">
          <children>
-            <VBox alignment="CENTER_LEFT" prefHeight="545.0" prefWidth="610.0">
+            <VBox alignment="CENTER_LEFT" prefHeight="400.0" prefWidth="610.0">
                <children>
-                  <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="494.0">
-                     <children>
-                        <Label text="ID Bill">
-                           <font>
-                              <Font name="Segoe UI Bold" size="18.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="100.0" right="35.0" />
-                           </HBox.margin>
-                        </Label>
-                        <TextField fx:id="idText" disable="true" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
-                           <HBox.margin>
-                              <Insets left="84.0" />
-                           </HBox.margin>
-                        </TextField>
-                     </children>
-                     <VBox.margin>
-                        <Insets bottom="15.0" />
-                     </VBox.margin>
-                  </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="610.0">
                      <children>
                         <Label text="Tòa">
@@ -70,31 +50,11 @@
                               <Insets left="100.0" right="35.0" />
                            </HBox.margin>
                         </Label>
-                        <ComboBox fx:id="roomComboBox" prefHeight="45.0" prefWidth="250.0" styleClass="combobox">
+                        <TextField fx:id="roomText" disable="true" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
                            <HBox.margin>
-                              <Insets left="53.0" />
+                              <Insets left="52.0" />
                            </HBox.margin>
-                        </ComboBox>
-                     </children>
-                     <VBox.margin>
-                        <Insets top="20.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="48.0" prefWidth="606.0">
-                     <children>
-                        <Label text="ID Nhân viên">
-                           <font>
-                              <Font name="Segoe UI Bold" size="18.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="100.0" right="35.0" />
-                           </HBox.margin>
-                        </Label>
-                        <ComboBox fx:id="employeeComboBox" prefHeight="45.0" prefWidth="250.0" styleClass="combobox">
-                           <HBox.margin>
-                              <Insets left="24.0" />
-                           </HBox.margin>
-                        </ComboBox>
+                        </TextField>
                      </children>
                      <VBox.margin>
                         <Insets top="20.0" />
@@ -110,7 +70,7 @@
                               <Insets left="100.0" />
                            </HBox.margin>
                         </Label>
-                        <ComboBox fx:id="studentComboBox" prefHeight="45.0" prefWidth="250.0" styleClass="combobox">
+                        <ComboBox fx:id="studentComboBox" onAction="#selectStudent" prefHeight="45.0" prefWidth="250.0" styleClass="combobox">
                            <HBox.margin>
                               <Insets left="68.0" />
                            </HBox.margin>
@@ -122,7 +82,7 @@
                   </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="200.0">
                      <children>
-                        <Label text="Ngày lập ">
+                        <Label text="Họ tên ">
                            <font>
                               <Font name="Segoe UI Bold" size="18.0" />
                            </font>
@@ -130,9 +90,9 @@
                               <Insets left="100.0" right="35.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField fx:id="dateText" disable="true" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
+                        <TextField fx:id="nameText" disable="true" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
                            <HBox.margin>
-                              <Insets left="54.0" />
+                              <Insets left="70.0" />
                            </HBox.margin>
                         </TextField>
                      </children>
@@ -152,7 +112,7 @@
                         </Label>
                         <TextField fx:id="totalText" disable="true" prefHeight="35.0" prefWidth="250.0" styleClass="textField2">
                            <HBox.margin>
-                              <Insets left="90.0" />
+                              <Insets left="88.0" />
                            </HBox.margin>
                            <padding>
                               <Insets bottom="10.0" top="20.0" />
@@ -163,29 +123,9 @@
                         <Insets top="15.0" />
                      </VBox.margin>
                   </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="608.0">
-                     <children>
-                        <Label text="Trạng thái">
-                           <font>
-                              <Font name="Segoe UI Bold" size="18.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="100.0" />
-                           </HBox.margin>
-                        </Label>
-                        <TextField fx:id="statusText" disable="true" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
-                           <HBox.margin>
-                              <Insets left="85.0" />
-                           </HBox.margin>
-                        </TextField>
-                     </children>
-                     <VBox.margin>
-                        <Insets top="15.0" />
-                     </VBox.margin>
-                  </HBox>
                </children>
                <VBox.margin>
-                  <Insets top="30.0" />
+                  <Insets />
                </VBox.margin>
             </VBox>
             <HBox alignment="CENTER" prefHeight="168.0" prefWidth="600.0">
