--- a/src/main/resources/View/roomArrangementForm.fxml
+++ b/src/main/resources/View/roomArrangementForm.fxml
@@ -12,18 +12,18 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="300.0" prefWidth="600.0" styleClass="casualPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.RoomArrangementFormController">
+<AnchorPane id="AnchorPane" prefHeight="358.0" prefWidth="600.0" styleClass="casualPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.RoomArrangementFormController">
     <stylesheets>
         <URL value="@/styles/main.css" />
     </stylesheets>
    <children>
-      <BorderPane prefHeight="300.0" prefWidth="600.0">
+      <BorderPane prefHeight="358.0" prefWidth="600.0">
          <bottom>
-            <HBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+            <HBox prefHeight="60.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                <children>
                   <Button mnemonicParsing="false" onAction="#backbtn" styleClass="buttonindashboard" text="Hủy">
                      <HBox.margin>
-                        <Insets left="165.0" top="9.0" />
+                        <Insets left="165.0" top="16.0" />
                      </HBox.margin>
                      <padding>
                         <Insets bottom="6.0" left="24.0" right="24.0" top="6.0" />
@@ -40,85 +40,94 @@
                         <Font size="14.0" />
                      </font>
                      <HBox.margin>
-                        <Insets left="80.0" top="9.0" />
+                        <Insets left="80.0" top="16.0" />
                      </HBox.margin>
                   </Button>
                </children>
             </HBox>
          </bottom>
          <center>
-            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+            <VBox prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
-                  <HBox prefHeight="70.0" prefWidth="600.0">
+                  <HBox prefHeight="48.0" prefWidth="600.0">
                      <children>
                         <Label text="Họ và tên: ">
                            <font>
-                              <Font size="18.0" />
+                              <Font name="System Bold" size="18.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="90.0" top="20.0" />
+                              <Insets left="130.0" top="5.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField fx:id="nameText" onKeyPressed="#TextChange" prefHeight="30.0" prefWidth="309.0">
+                        <TextField fx:id="nameText" onKeyPressed="#TextChange" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
                            <HBox.margin>
-                              <Insets left="9.0" top="16.0" />
+                              <Insets left="18.0" />
                            </HBox.margin>
                         </TextField>
                      </children>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
                   </HBox>
-                  <HBox prefHeight="70.0" prefWidth="200.0">
+                  <HBox prefHeight="48.0" prefWidth="200.0">
                      <children>
                         <Label text="Giới tính: ">
                            <font>
-                              <Font size="18.0" />
+                              <Font name="System Bold" size="18.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="90.0" top="15.0" />
+                              <Insets left="130.0" top="5.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField fx:id="genderText" disable="true" prefHeight="30.0" prefWidth="309.0">
+                        <TextField fx:id="genderText" disable="true" prefHeight="45.0" prefWidth="250.0" styleClass="textField2">
                            <HBox.margin>
-                              <Insets left="19.0" top="10.0" />
+                              <Insets left="26.0" />
                            </HBox.margin>
                         </TextField>
                      </children>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
                   </HBox>
-                  <HBox prefHeight="70.0" prefWidth="200.0">
+                  <HBox prefHeight="48.0" prefWidth="200.0">
                      <children>
                         <Label text="Tòa: ">
                            <font>
-                              <Font size="18.0" />
+                              <Font name="System Bold" size="18.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="90.0" top="11.0" />
+                              <Insets left="130.0" top="5.0" />
                            </HBox.margin>
                         </Label>
-                        <ComboBox fx:id="apartmentComboBox" onAction="#selectHandle" prefHeight="30.0" prefWidth="183.0" styleClass="combobox">
+                        <ComboBox fx:id="apartmentComboBox" onAction="#selectHandle" prefHeight="45.0" prefWidth="250.0" styleClass="combobox">
                            <HBox.margin>
-                              <Insets left="59.0" top="5.0" />
+                              <Insets left="68.0" />
                            </HBox.margin>
                         </ComboBox>
                      </children>
                      <VBox.margin>
-                        <Insets />
+                        <Insets top="20.0" />
                      </VBox.margin>
                   </HBox>
-                  <HBox prefHeight="70.0" prefWidth="200.0">
+                  <HBox prefHeight="48.0" prefWidth="200.0">
                      <children>
                         <Label text="Số phòng: ">
                            <font>
-                              <Font size="18.0" />
+                              <Font name="System Bold" size="18.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="90.0" top="3.0" />
+                              <Insets left="130.0" top="5.0" />
                            </HBox.margin>
                         </Label>
-                        <ComboBox fx:id="roomComboBox" prefHeight="30.0" prefWidth="183.0" styleClass="combobox">
+                        <ComboBox fx:id="roomComboBox" prefHeight="45.0" prefWidth="250.0" styleClass="combobox">
                            <HBox.margin>
-                              <Insets left="11.0" />
+                              <Insets left="19.0" />
                            </HBox.margin>
                         </ComboBox>
                      </children>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
                   </HBox>
                </children>
             </VBox>
