--- a/src/main/resources/View/accountPane.fxml
+++ b/src/main/resources/View/accountPane.fxml
@@ -105,12 +105,17 @@
                            <font>
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font></Label>
-                        <TextField fx:id="idTextField" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
+                        <TextField fx:id="idTextField" onKeyReleased="#fieldValueChange" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" />
+                        <Insets />
                      </VBox.margin>
                   </HBox>
+                  <Label fx:id="nameError" text="Không được để trống" textFill="RED" visible="false">
+                     <font>
+                        <Font name="Segoe UI" size="12.0" />
+                     </font>
+                  </Label>
                   <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0">
                      <children>
                         <Label prefWidth="120.0" text="Ngày sinh">
@@ -118,10 +123,30 @@
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
                         </Label>
-                        <DatePicker fx:id="birthdayPicker" prefHeight="45.0" prefWidth="200.0" />
+                        <DatePicker fx:id="birthdayPicker" onAction="#fieldValueChange" prefHeight="45.0" prefWidth="200.0" />
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" />
+                        <Insets />
+                     </VBox.margin>
+                  </HBox>
+                  <Label fx:id="birthdayError" layoutX="156.0" layoutY="485.0" text="Không được để trống" textFill="RED" visible="false">
+                     <font>
+                        <Font name="Segoe UI" size="12.0" />
+                     </font>
+                  </Label>
+                  <HBox alignment="CENTER">
+                     <children>
+                        <Label prefWidth="120.0" text="Vị trí">
+                           <font>
+                              <Font name="Segoe UI Bold" size="14.0" />
+                           </font></Label>
+                        <ComboBox fx:id="positionCombobox" prefHeight="45.0" prefWidth="200.0" styleClass="combobox">
+                           <HBox.margin>
+                              <Insets bottom="15.0" />
+                           </HBox.margin></ComboBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets />
                      </VBox.margin>
                   </HBox>
                   <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0">
@@ -131,24 +156,17 @@
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="addressText" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
+                        <TextField fx:id="addressText" onKeyReleased="#fieldValueChange" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" />
+                        <Insets />
                      </VBox.margin>
                   </HBox>
-                  <HBox alignment="CENTER">
-                     <children>
-                        <Label prefWidth="120.0" text="Vị trí">
-                           <font>
-                              <Font name="Segoe UI Bold" size="14.0" />
-                           </font></Label>
-                        <ComboBox fx:id="positionCombobox" prefHeight="45.0" prefWidth="200.0" styleClass="combobox" />
-                     </children>
-                     <VBox.margin>
-                        <Insets bottom="20.0" />
-                     </VBox.margin>
-                  </HBox>
+                  <Label fx:id="addressError" layoutX="156.0" layoutY="485.0" text="Không được để trống" textFill="RED" visible="false">
+                     <font>
+                        <Font name="Segoe UI" size="12.0" />
+                     </font>
+                  </Label>
                   <HBox alignment="CENTER" layoutX="10.0" layoutY="75.0">
                      <children>
                         <Label prefWidth="120.0" text="Số điện thoại">
@@ -156,12 +174,17 @@
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="phoneText" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
+                        <TextField fx:id="phoneText" onKeyReleased="#fieldValueChange" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" />
+                        <Insets />
                      </VBox.margin>
                   </HBox>
+                  <Label fx:id="phoneError" layoutX="156.0" layoutY="486.0" text="Không được để trống" textFill="RED" visible="false">
+                     <font>
+                        <Font name="Segoe UI" size="12.0" />
+                     </font>
+                  </Label>
                   <HBox alignment="CENTER" layoutX="10.0" layoutY="250.0">
                      <children>
                         <Label prefWidth="120.0" text="Tên tài khoản">
@@ -169,12 +192,17 @@
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="usernameText" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
+                        <TextField fx:id="usernameText" onKeyReleased="#fieldValueChange" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" />
+                        <Insets />
                      </VBox.margin>
                   </HBox>
+                  <Label fx:id="usernameError" layoutX="156.0" layoutY="332.0" text="Không được để trống" textFill="RED" visible="false">
+                     <font>
+                        <Font name="Segoe UI" size="12.0" />
+                     </font>
+                  </Label>
                   <HBox alignment="CENTER" layoutX="10.0" layoutY="295.0">
                      <children>
                         <Label prefWidth="120.0" text="Mật khẩu">
@@ -182,13 +210,18 @@
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="passwordText" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
+                        <TextField fx:id="passwordText" onKeyReleased="#fieldValueChange" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" />
+                        <Insets />
                      </VBox.margin>
                   </HBox>
-                  <Button mnemonicParsing="false" onAction="#addEmployee" prefHeight="45.0" prefWidth="150.0" styleClass="buttonindashboard" text="Thêm Mới" textFill="WHITE">
+                  <Label fx:id="passError" layoutX="156.0" layoutY="390.0" text="Không được để trống" textFill="RED" visible="false">
+                     <font>
+                        <Font name="Segoe UI" size="12.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="addBtn" disable="true" mnemonicParsing="false" onAction="#addEmployee" prefHeight="45.0" prefWidth="150.0" styleClass="buttonindashboard" text="Thêm Mới" textFill="WHITE">
 
                      <padding>
                         <Insets bottom="10.0" left="24.0" right="24.0" top="10.0" />
